01-go/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
  labels:
    app: goserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goserver
  template:
    metadata:
      labels:
        app: goserver
    spec:
      containers:
        - name: goserver
          image: faelk8/hello-go:1.8

          resources:
            requests: 
              cpu: "0.05"
              memory: 20Mi
            limits:
              cpu: "0.05"
              memory: 25Mi

          startupProbe:
            httpGet:
              path: /healthz
              port: 9000
            periodSeconds: 3
            failureThreshold: 10

          readinessProbe:
            httpGet:
              path: /healthz
              port: 9000
            periodSeconds: 3
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1

          livenessProbe:
            httpGet:
              path: /healthz
              port: 9000
            periodSeconds: 5
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
              
          volumeMounts:
            - mountPath: "/go/redessocias"
              name: config
            - mountPath: "/go/pvc"
              name: goserver-volume

      volumes:
        - name: goserver-volume
          persistentVolumeClaim: 
            claimName: goserver-pvc
          
        - name: config
          configMap: 
            name: configmap-redes-sociais
            items:
            - key: members
              path: "redessocias.txt"
