01-go/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  labels:
    name: ingress-host
  annotations:
    kubernetex.io/ingress.class: "nginx" # Adaptador
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: "exemplo.com.br"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-goserver
            port: 
              number: 8080
  tls:
  - hosts:
    - "exemplo.com.br"
    secretName: letsencrypt-tls
